Fix typo in victory condition description in score-form.html

--- a/src/main/resources/templates/score-form.html
+++ b/src/main/resources/templates/score-form.html
@@ -282,7 +282,7 @@
             <ul>
                 <li>Individual: Cada jogador soma pontos das peças restantes dos oponentes</li>
                 <li>Duplas: A dupla vencedora soma os pontos das peças restantes da dupla adversária</li>
-                <li>Vitória: Primeiro a atingir a 100 pontos)</li>
+                <li>Vitória: Primeiro a atingir a 100 pontos</li>
             </ul>
 
             <h6>Dicas:</h6>
